--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "client",
   "private": true,
   "version": "0.0.0",
+  "engines": {
+    "node": "22.x",
+    "npm": ">=10.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
